clipboard: fix file transfer & export functionality - grants read to all installed flatpak apps

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     hooks:
       - id: go-mod-tidy
         name: go mod tidy
-        entry: go mod tidy
+        entry: bash -c 'cd core && go mod tidy'
         language: system
-        files: (go\.mod|go\.sum|\.go)$
+        files: ^core/.*\.(go|mod|sum)$
         pass_filenames: false
