ci: fix pre-commit go path

--- a/.github/workflows/prek.yml
+++ b/.github/workflows/prek.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: go.mod
+          go-version-file: core/go.mod
 
       - name: run pre-commit hooks
         uses: j178/prek-action@v1
