--- a/quickshell/matugen/configs/emacs.toml
+++ b/quickshell/matugen/configs/emacs.toml
@@ -1,3 +1,3 @@
 [templates.dmsemacs]
 input_path = 'SHELL_DIR/matugen/templates/dank-emacs.el'
-output_path = "~/.emacs.d/themes/dank-emacs-theme.el"
+output_path = 'EMACS_DIR/themes/dank-emacs-theme.el'
