--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -8,7 +8,7 @@ body:
       value: |
         ## DankMaterialShell Bug Report
         Limit your report to one issue per submission unless closely related
-  - type: checkboxes
+  - type: dropdown
     id: compositor
     attributes:
       label: Compositor
@@ -19,7 +19,7 @@ body:
         - label: Sway
     validations:
       required: true
-  - type: checkboxes
+  - type: dropdown
     id: distribution
     attributes:
       label: Distribution
@@ -42,12 +42,44 @@ body:
       placeholder: e.g., PikaOS, Void Linux, etc.
     validations:
       required: false
+  - type: dropdown
+    id: installation_method
+    attributes:
+      label: Select your Installation Method
+      options:
+        - DankInstaller
+        - Distro Packaging
+        - Source
+    validations:
+      required: true
+  - type: dropdown
+    id: original_installation_method_different
+    attributes:
+      label: Was your original Installation method different?
+      options:
+        - Yes
+        - No (specify below)
+    validations:
+      required: false
+  - type: input
+    id: original_installation_method_specify
+    attributes:
+      label: If no, specify
+      placeholder: e.g., Distro Packaging, then Source
+    validations:
+      required: false
   - type: textarea
     id: dms_doctor
     attributes:
       label: dms doctor -vC
-      description: Output of `dms doctor -vC` command
+      description: Output of `dms doctor -vC` command — paste between the lines below to keep it collapsed in the issue
       placeholder: Paste the output of `dms doctor -vC` here
+      value: |
+        <details>
+        <summary>Click to expand</summary>
+
+
+        </details>
     validations:
       required: true
   - type: textarea
@@ -69,7 +101,7 @@ body:
   - type: textarea
     id: steps_to_reproduce
     attributes:
-      label: Steps to Reproduce & Installation Method
+      label: Steps to Reproduce
       description: Please provide detailed steps to reproduce the issue
       placeholder: |
         1. ...
