issues: Template fix

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -57,7 +57,7 @@ body:
     attributes:
       label: Was your original Installation method different?
       options:
-        - Yes
+        - "Yes"
         - No (specify below)
     validations:
       required: false
