template: Default install method

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -59,6 +59,7 @@ body:
       options:
         - "Yes"
         - No (specify below)
+      default: 0
     validations:
       required: false
   - type: input
