--- a/.github/ISSUE_TEMPLATE/support_request.yml
+++ b/.github/ISSUE_TEMPLATE/support_request.yml
@@ -66,6 +66,7 @@ body:
       options:
         - "Yes"
         - No (specify below)
+      default: 0
     validations:
       required: false
   - type: input
